--- a/index.html
+++ b/index.html
@@ -230,6 +230,60 @@
 
         </section>
 
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/video.webm" type="video/webm">
+                    Your browser is not supported!
+                </video>
+            </div>
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-scoundary">
+                    we make people generally happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-8.jpg" alt="person on" class="story__img">
+                        <figcaption class="story__caption">mary smath</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small"> i had best week ever with my family</h3>
+                        <p class="paragraph">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sapiente nesciunt inventore
+                            voluptatibus laborum impedit temporibus reprehenderit totam, iure illum cum saepe error
+                            distinctio, repellat culpa laboriosam, fuga ea facere.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="person on" class="story__img">
+                        <figcaption class="story__caption">jack wilson</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small"> my life completely different now</h3>
+                        <p class="paragraph">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sapiente nesciunt inventore
+                            voluptatibus laborum impedit temporibus reprehenderit totam, iure illum cum saepe error
+                            distinctio, repellat culpa laboriosam, fuga ea facere.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-hug">
+                <a href="#" class=" btn-text">Discover all tours &rarr;</a>
+            </div>
+
+        </section>
+
     </main>
 
     <!--
