--- a/index.html
+++ b/index.html
@@ -284,6 +284,62 @@
 
         </section>
 
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+
+                            <div class=" u-margin-bottom-medium">
+                                <h2 class="heading-scoundary">
+                                    statrt booking now!
+                                </h2>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                                <label for="name" class="form__label">Full name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email address" id="name" required>
+                                <label for="email" class="form__label">Email address</label>
+                            </div>
+
+                            <div class="form__group u-margin-bottom-medium">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Samll tour group
+                                    </label>
+                                </div>
+
+
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="Large" name="size">
+                                    <label for="Large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour group
+                                    </label>
+                                </div>
+
+                            </div>
+
+                            <div class="form__group ">
+                                <button class="btn btn--grean">
+                                    Next steep &rarr;
+                                </button>
+
+
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!--
