--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
 </head>
 
 <body>
+
+
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+
+        <div class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+
     <header class="header">
         <div class="header__logo-box">
             <img class="header__logo" src="./img/logo-white.png" alt="logo">
@@ -25,7 +49,7 @@
                 <span class="heading-primary--main">Outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn--white btn--animation">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animation">Discover our tours</a>
         </div>
 
     </header>
@@ -112,7 +136,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-scoundary">
                     most popular tours
@@ -146,7 +170,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">297$</p>
                                 </div>
-                                <a href="#" class="btn btn--white">book now</a>
+                                <a href="#popup" class="btn btn--white">book now</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +206,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">497$</p>
                                 </div>
-                                <a href="#" class="btn btn--white">book now</a>
+                                <a href="#popup" class="btn btn--white">book now</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +241,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">897$</p>
                                 </div>
-                                <a href="#" class="btn btn--white">book now</a>
+                                <a href="#popup" class="btn btn--white">book now</a>
                             </div>
                         </div>
                     </div>
@@ -302,7 +326,7 @@
                             </div>
 
                             <div class="form__group">
-                                <input type="email" class="form__input" placeholder="Email address" id="name" required>
+                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
                                 <label for="email" class="form__label">Email address</label>
                             </div>
 
@@ -357,7 +381,8 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
+                    Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#"
+                        class="footer__link">Advanced CSS and Sass</a>.
                     Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal
                     and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas
                     Schmedtmann, is of course highly appreciated!
@@ -365,6 +390,32 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-scoundary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
+                    amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
+                    sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+                    gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
+                    Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                    vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+                    vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
+                    euismod nisi porta.
+                </p>
+                <a href="#" class="btn btn--grean">Book now</a>
+            </div>
+        </div>
+    </div>
 
     <!--
     <section>
