--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="/img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
         </div>
         <div class="row">
             <div class="col-1-of-2">
