--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/icon-font.css">
+    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -80,9 +80,19 @@
 
                 <div class="col-1-of-2">
                     <div class="compostion">
-                        <img src="img/nat-1-large.jpg" alt="photo 1" class="compostion__photo compostion__photo--p1">
-                        <img src="img/nat-2-large.jpg" alt="photo 2 " class="compostion__photo compostion__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="photo 3" class="compostion__photo compostion__photo--p3">
+
+                        <img srcset=" img/nat-1.jpg 300w ,img/nat-1-large.jpg 1000w"
+                            sizes=" (max-width:56.25em) 20vw , (max-width:37.5em) 30vw , 300px" alt="photo 1"
+                            class="compostion__photo compostion__photo--p1" src="img/nat-1-large.jpg">
+
+                        <img srcset=" img/nat-2.jpg 300w ,img/nat-2-large.jpg 1000w"
+                            sizes=" (max-width:56.25em) 20vw , (max-width:37.5em) 30vw , 300px" alt="photo 2"
+                            class="compostion__photo compostion__photo--p2" src="img/nat-2-large.jpg">
+
+                        <img srcset=" img/nat-3.jpg 300w ,img/nat-3-large.jpg 1000w"
+                            sizes=" (max-width:56.25em) 20vw , (max-width:37.5em) 30vw , 300px" alt="photo 3"
+                            class="compostion__photo compostion__photo--p3" src="img/nat-3-large.jpg">
+
                     </div>
                 </div>
             </div>
@@ -365,7 +375,14 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+
+            <picture class="footer__logo">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x "
+                    media="(max-width: 37.5em)">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x " alt="full logo"
+                    src="img/logo-green-2x.png">
+            </picture>
+
         </div>
         <div class="row">
             <div class="col-1-of-2">
@@ -400,14 +417,18 @@
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-scoundary u-margin-bottom-small">Start booking now</h2>
-                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
                 <p class="popup__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
                     Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
                     amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
                     sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
-                    gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
-                    Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                    gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque
+                    laoreet.
+                    Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis.
+                    Faucibus
                     vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
                     vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
                     euismod nisi porta.
